# peachnx

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
docs/objectives/september/: List
docs/ui/: UI APIs in Use
src/: CMakeLists.txt  container.h  generic.h  types.cpp  types.h  virtual_allocator.cpp  virtual_allocator.h
src/common/: common_types.h  virtual_allocator.cpp  virtual_allocator.h
src/core/: application.cpp  application.h  assets_backing.cpp  assets_backing.h  games_list.cpp  games_list.h  process.cpp  process.h
src/crypto/: aes_storage.cpp  aes_storage.h  checksum.cpp  checksum.h  keys_types.cpp  keys_types.h  keysdb.cpp  keysdb.h  ticket.cpp  ticket.h
src/disk/: content_meta.cpp  content_meta.h  encrypted_ranged_file.cpp  encrypted_ranged_file.h  nca.cpp  nca.h  nca_filesystem_info.cpp  nca_filesystem_info.h  nca_mount.cpp  nca_mount.h  offset_file.cpp  offset_file.h  partition_filesystem.cpp  partition_filesystem.h  realfs.cpp  realfs.h  regular_file.cpp  regular_file.h  virtual_file.cpp  virtual_file.h  virtual_types.h
src/kernel/: async.cpp  async.h  kernel.cpp  kernel.h  kernel_types.h  kprocess.cpp  kprocess.h
src/loader/: application.cpp  application.h  content_archive.cpp  content_archive.h  content_meta.cpp  content_meta.h  loader.cpp  loader.h  nca.cpp  nca.h  nca_filesystem_info.cpp  nca_filesystem_info.h  nca_mount.cpp  nca_mount.h  nsp.cpp  nsp.h  submission_package.cpp  submission_package.h
src/meta/: content_meta.cpp  content_meta.h
src/os/: make_process.cpp  make_process.h
src/peachnx/: CMakeLists.txt  application.cpp  game_item_widget.cpp  game_item_widget.h  main_window.cpp  main_window.h
src/peachnx_cmd/: CMakeLists.txt  main.cpp
src/service/: make_process.cpp  make_process.h  process.cpp  process.h
src/service/am/: am_types.h  applet_manager.h
src/settings/: configuration.cpp  configuration.h  options.h  options_type.h
src/surface/: sdl_impl_gl.cpp  sdl_impl_gl.h  sdl_window.cpp  sdl_window.h
src/sys_fs/: encrypted_ranged_file.cpp  encrypted_ranged_file.h  offset_file.cpp  offset_file.h  partition_filesystem.cpp  partition_filesystem.h  realfs.cpp  realfs.h  regular_file.cpp  regular_file.h  virtual_file.cpp  virtual_file.h  virtual_types.h
